--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -14,19 +14,11 @@ style="display: flex;flex-direction: column;gap: 2px;">
 <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
-<div *ngIf="bmxClientPageOverview" style="display: flex;
-flex-direction: row-reverse;
-justify-content: end;
-top: -30px;
-right: 50px;top: -50px;border: 2px dashed #324395;padding-right: 10px;background: #ffffffd9;
-position: absolute;height: 54px;align-items: center">
+<div *ngIf="bmxClientPageOverview" class="overview" style="">
 
 <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
-<div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="    display: flex;
-flex-direction: row;
-justify-content: start;background: #ffffffd9;
-gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;">
+<div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="pageOverview" >
     <div style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;color: #324395;">select
         </p>
@@ -65,7 +57,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
     </div>
 
     <!-- COMMENTS -->
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div *ngIf="columnsNames.includes('Comments0')" style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;color: #324395;">comments
         </p>
         <input type="range" style="margin: 20px;width: 50px;"
@@ -162,7 +154,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
         matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
     </button>
-    <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
+    <button  (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
         matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
     </button>
