--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
@@ -1,32 +1,56 @@
 @mixin BoxShadow($dp) {
   @if $dp==0 {
-      box-shadow: none;
+    box-shadow: none;
   } @else if $dp==1 {
-      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 1px 1px 0 rgba(0, 0, 0, 0.14),
+      0 2px 1px -1px rgba(0, 0, 0, 0.12),
+      0 1px 3px 0 rgba(0, 0, 0, 0.2);
   } @else if $dp==2 {
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 2px 2px 0 rgba(0, 0, 0, 0.14),
+      0 3px 1px -2px rgba(0, 0, 0, 0.12),
+      0 1px 5px 0 rgba(0, 0, 0, 0.2);
   } @else if $dp==3 {
-      box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 3px 4px 0 rgba(0, 0, 0, 0.14),
+      0 3px 3px -2px rgba(0, 0, 0, 0.12),
+      0 1px 8px 0 rgba(0, 0, 0, 0.2);
   } @else if $dp==4 {
-      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 4px 5px 0 rgba(0, 0, 0, 0.14),
+      0 1px 10px 0 rgba(0, 0, 0, 0.12),
+      0 2px 4px -1px rgba(0, 0, 0, 0.2);
   } @else if $dp==6 {
-      box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12),
-          0 3px 5px -1px rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 6px 10px 0 rgba(0, 0, 0, 0.14),
+      0 1px 18px 0 rgba(0, 0, 0, 0.12),
+      0 3px 5px -1px rgba(0, 0, 0, 0.2);
   } @else if $dp==8 {
-      box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12),
-          0 5px 5px -3px rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12),
+      0 5px 5px -3px rgba(0, 0, 0, 0.2);
   } @else if $dp==9 {
-      box-shadow: 0 9px 12px 1px rgba(0, 0, 0, 0.14), 0 3px 16px 2px rgba(0, 0, 0, 0.12),
-          0 5px 6px -3px rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 9px 12px 1px rgba(0, 0, 0, 0.14),
+      0 3px 16px 2px rgba(0, 0, 0, 0.12),
+      0 5px 6px -3px rgba(0, 0, 0, 0.2);
   } @else if $dp==12 {
-      box-shadow: 0 12px 17px 2px rgba(0, 0, 0, 0.14), 0 5px 22px 4px rgba(0, 0, 0, 0.12),
-          0 7px 8px -4px rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 12px 17px 2px rgba(0, 0, 0, 0.14),
+      0 5px 22px 4px rgba(0, 0, 0, 0.12),
+      0 7px 8px -4px rgba(0, 0, 0, 0.2);
   } @else if $dp==16 {
-      box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12),
-          0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 16px 24px 2px rgba(0, 0, 0, 0.14),
+      0 6px 30px 5px rgba(0, 0, 0, 0.12),
+      0 8px 10px -5px rgba(0, 0, 0, 0.2);
   } @else if $dp==24 {
-      box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12),
-          0 11px 15px -7px rgba(0, 0, 0, 0.2);
+    box-shadow:
+      0 24px 38px 3px rgba(0, 0, 0, 0.14),
+      0 9px 46px 8px rgba(0, 0, 0, 0.12),
+      0 11px 15px -7px rgba(0, 0, 0, 0.2);
   }
 }
 
@@ -40,32 +64,31 @@
   color: grey;
 }
 // 🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧
-.sm-section2-rkScale{
+.sm-section2-rkScale {
   display: flex;
   flex-direction: column;
   gap: 10px;
   align-items: center;
   width: 100%;
-
 }
 
-.sm-row-box-rkScale{
+.sm-row-box-rkScale {
   display: flex;
   gap: 2rem;
   flex-direction: row;
   justify-content: center;
   width: 100%;
-
 }
-.sm-column-box-rkScale{
+.sm-column-box-rkScale {
   display: flex;
   gap: 2rem;
   flex-direction: row;
   align-items: flex-end;
   width: 100%;
-  justify-content: center;}
+  justify-content: center;
+}
 
-.sm-section3-rkScale{
+.sm-section3-rkScale {
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -76,6 +99,31 @@
   gap: 1rem;
 }
 
+.pageOverview {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  background: #ffffffd9;
+  gap: 0px;
+  position: absolute;
+  left: -713px;
+  z-index: 1;
+  border: 2px dashed #324395;
+}
+.overview {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: end;
+  top: -30px;
+  right: 50px;
+  top: -50px;
+  border: 2px dashed #324395;
+  padding-right: 10px;
+  background: #ffffffd9;
+  position: absolute;
+  height: 54px;
+  align-items: center;
+}
 // 🥑🥑🥑🥑 CONFIGURATION BOX 🥑🥑🥑🥑
 @media (min-width: 576px) {
   .desktop {
@@ -105,22 +153,19 @@
     border-radius: 5px;
     width: 100vw;
     overflow: hidden;
-
   }
 
   .mobile {
     padding-bottom: 30px;
   }
 
-  .selectedCard{
-   display: none;
+  .selectedCard {
+    display: none;
   }
-  .noSelectedCard{
+  .noSelectedCard {
     right: 7px;
   }
-
 }
-
 
 .red {
   background-color: white;
@@ -134,7 +179,7 @@
 .blue {
   background-color: white;
   border-left: rgb(230, 230, 230) 1px solid;
-  border-right: rgb(231, 230, 230) 1px solid;// COMMENT IF YOU WANT SINGLE LINES
+  border-right: rgb(231, 230, 230) 1px solid; // COMMENT IF YOU WANT SINGLE LINES
   border-top: rgb(231, 230, 230) 1px solid;
   padding: 0px;
   // margin: 5px;
@@ -151,7 +196,6 @@
   justify-items: center;
   // overflow-x: scroll;
 }
-
 
 .rating-text {
   font-size: 17px;
@@ -196,16 +240,14 @@
   outline: none;
   float: right;
 
-  mat-icon{
+  mat-icon {
     color: #324395;
   }
 }
 
-
 .test-name-table:hover {
   @include BoxShadow(6);
 }
-
 
 .scroller-style::-webkit-scrollbar {
   width: 3px;
@@ -227,14 +269,12 @@
   background: #283e90;
 }
 
-
 textarea {
   resize: none;
   outline: none;
   height: auto;
   overflow: auto;
 }
-
 
 textarea::-webkit-scrollbar {
   width: 3px;
@@ -264,7 +304,7 @@ textarea {
   -webkit-tap-highlight-color: transparent;
   width: 100%;
   // min-height: 1.5rem;
-  padding: 0.2rem 0.0rem;
+  padding: 0.2rem 0rem;
   // font-size: 1rem;
   // line-height: 2rem;
   // font-weight: 300;
@@ -294,7 +334,6 @@ textarea:placeholder-shown {
   background: none;
 }
 
-
 mat-form-field {
   margin-right: 12px;
 }
@@ -313,13 +352,17 @@ input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 5px;
   cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  box-shadow:
+    1px 1px 1px #000000,
+    0px 0px 1px #0d0d0d;
   background: #ef7f25;
   border-radius: 1.3px;
   // border: 0.2px solid #010101;
 }
 input[type="range"]::-webkit-slider-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  box-shadow:
+    1px 1px 1px #000000,
+    0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 16px;
   width: 16px;
@@ -336,13 +379,17 @@ input[type="range"]::-moz-range-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  box-shadow:
+    1px 1px 1px #000000,
+    0px 0px 1px #0d0d0d;
   background: #ef7f25;
   border-radius: 1.3px;
   border: 0.2px solid #010101;
 }
 input[type="range"]::-moz-range-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  box-shadow:
+    1px 1px 1px #000000,
+    0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
   width: 16px;
@@ -363,16 +410,22 @@ input[type="range"]::-ms-fill-lower {
   background: #2a6495;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  box-shadow:
+    1px 1px 1px #000000,
+    0px 0px 1px #0d0d0d;
 }
 input[type="range"]::-ms-fill-upper {
   background: #ef7f25;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  box-shadow:
+    1px 1px 1px #000000,
+    0px 0px 1px #0d0d0d;
 }
 input[type="range"]::-ms-thumb {
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  box-shadow:
+    1px 1px 1px #000000,
+    0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
   width: 16px;
@@ -387,17 +440,17 @@ input[type="range"]:focus::-ms-fill-upper {
   background: #ef7f25;
 }
 
-@supports(-webkit-appearance: none) or (-moz-appearance: none) {
-  input[type='checkbox'],
-  input[type='radio'] {
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+  input[type="checkbox"],
+  input[type="radio"] {
     --active: #ee7f25;
     --active-inner: #fff;
-    --focus: 2px rgba(39, 94, 254, .3);
-    --border: #BBC1E1;
+    --focus: 2px rgba(39, 94, 254, 0.3);
+    --border: #bbc1e1;
     --border-hover: #ee7f25;
     --background: #fff;
-    --disabled: #F6F8FF;
-    --disabled-inner: #E1E6F9;
+    --disabled: #f6f8ff;
+    --disabled-inner: #e1e6f9;
     -webkit-appearance: none;
     -moz-appearance: none;
     height: 21px;
@@ -409,26 +462,31 @@ input[type="range"]:focus::-ms-fill-upper {
     cursor: pointer;
     border: 1px solid var(--bc, var(--border));
     background: var(--b, var(--background));
-    transition: background .3s, border-color .3s, box-shadow .2s;
+    transition:
+      background 0.3s,
+      border-color 0.3s,
+      box-shadow 0.2s;
     &:after {
-      content: '';
+      content: "";
       display: block;
       left: 0;
       top: 0;
       position: absolute;
-      transition: transform var(--d-t, .3s) var(--d-t-e, ease), opacity var(--d-o, .2s);
+      transition:
+        transform var(--d-t, 0.3s) var(--d-t-e, ease),
+        opacity var(--d-o, 0.2s);
     }
     &:checked {
       --b: var(--active);
       --bc: var(--active);
-      --d-o: .3s;
-      --d-t: .6s;
-      --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
+      --d-o: 0.3s;
+      --d-t: 0.6s;
+      --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
     }
     &:disabled {
       --b: var(--disabled);
       cursor: not-allowed;
-      opacity: .9;
+      opacity: 0.9;
       &:checked {
         --b: var(--disabled-inner);
         --bc: var(--border);
@@ -465,7 +523,7 @@ input[type="range"]:focus::-ms-fill-upper {
       margin-left: 4px;
     }
   }
-  input[type='checkbox'] {
+  input[type="checkbox"] {
     &:not(.switch) {
       border-radius: 7px;
       &:after {
@@ -501,13 +559,13 @@ input[type="range"]:focus::-ms-fill-upper {
       &:disabled {
         &:not(:checked) {
           &:after {
-            opacity: .6;
+            opacity: 0.6;
           }
         }
       }
     }
   }
-  input[type='radio'] {
+  input[type="radio"] {
     border-radius: 50%;
     &:after {
       width: 19px;
@@ -515,13 +573,14 @@ input[type="range"]:focus::-ms-fill-upper {
       border-radius: 50%;
       background: var(--active-inner);
       opacity: 0;
-      transform: scale(var(--s, .7));
+      transform: scale(var(--s, 0.7));
     }
     &:checked {
-      --s: .5;
+      --s: 0.5;
     }
   }
-}.modal-video {
+}
+.modal-video {
   /*display: block;  Hidden by default */
   position: fixed; /* Stay in place */
   top: 0%;
@@ -535,48 +594,50 @@ input[type="range"]:focus::-ms-fill-upper {
 
   /* Modal Content/Box */
   .modal-content {
-      background-color: rgba(0, 0, 0, 0);
-      top: 0%;
-      margin: 2% auto; /* 15% from the top and centered */
-      // margin-left: 15%;
-      // padding: 20px;
-      // border: 1px solid #888;
-      width: 70%; /* Could be more or less, depending on screen size */
+    background-color: rgba(0, 0, 0, 0);
+    top: 0%;
+    margin: 2% auto; /* 15% from the top and centered */
+    // margin-left: 15%;
+    // padding: 20px;
+    // border: 1px solid #888;
+    width: 70%; /* Could be more or less, depending on screen size */
+    height: auto;
+    img {
+      margin-bottom: 15px;
       height: auto;
-      img {
-          margin-bottom: 15px;
-          height: auto;
-      }
-      img:last-child {
-          margin-bottom: 0;
-      }
+    }
+    img:last-child {
+      margin-bottom: 0;
+    }
   }
 
   .close-modal {
-      // margin-bottom: 5px;
-      position: relative;
+    // margin-bottom: 5px;
+    position: relative;
 
-      // top: 12%;
-      left: 42.5%;
-      width: 15%;
-      padding: 0px 5px;
-      // margin-left: 36.5%;
-      color: #ffffff;
-      background-color: #ee7f24;
-      // float: right;
-      // font-size: 22px;
-      // font-weight: bold;
-      // text-align: center;
-      // height: 25px;
-      // border-radius: 5px;
-      transition: background-color 0.5s, color 0.5s;
+    // top: 12%;
+    left: 42.5%;
+    width: 15%;
+    padding: 0px 5px;
+    // margin-left: 36.5%;
+    color: #ffffff;
+    background-color: #ee7f24;
+    // float: right;
+    // font-size: 22px;
+    // font-weight: bold;
+    // text-align: center;
+    // height: 25px;
+    // border-radius: 5px;
+    transition:
+      background-color 0.5s,
+      color 0.5s;
   }
 
   .close-modal:hover,
   .close-modal:focus {
-      background-color: #283e90;
-      color: white;
-      text-decoration: none;
+    background-color: #283e90;
+    color: white;
+    text-decoration: none;
   }
 }
 /* escondemos el default checkbox */
@@ -591,39 +652,39 @@ input[type="range"]:focus::-ms-fill-upper {
 //-------------modal-----------------//
 @media (min-width: 1025px) {
   .modal-video .modal-content {
-      top: 10%;
-      margin: 1% auto;
-      margin-left: auto;
-      width: 55%;
-      // height: auto;
-      height: auto;
-      overflow-y: hidden;
-      overflow-x: hidden;
+    top: 10%;
+    margin: 1% auto;
+    margin-left: auto;
+    width: 55%;
+    // height: auto;
+    height: auto;
+    overflow-y: hidden;
+    overflow-x: hidden;
   }
 
   .modal-video .close-modal {
-      // margin-left: 42.5%;
-      top: 12%;
+    // margin-left: 42.5%;
+    top: 12%;
   }
 
   .modal-content::-webkit-scrollbar {
-      width: 6px;
+    width: 6px;
   }
 
   /* Track */
   .modal-content::-webkit-scrollbar-track {
-      background: white;
+    background: white;
   }
 
   /* Handle */
   .modal-content::-webkit-scrollbar-thumb {
-      background: #283e90;
-      border-radius: 10px;
+    background: #283e90;
+    border-radius: 10px;
   }
 
   /* Handle on hover */
   .modal-content::-webkit-scrollbar-thumb:hover {
-      background: #283e90;
+    background: #283e90;
   }
 }
 
@@ -631,56 +692,51 @@ input[type="range"]:focus::-ms-fill-upper {
 
 @media only screen and (min-width: 993px) and (max-width: 1024px) {
   .modal-video .modal-content {
-      top: 3%;
-      margin: 1% auto;
-      margin-left: auto;
-      width: 30%;
-      height: auto;
+    top: 3%;
+    margin: 1% auto;
+    margin-left: auto;
+    width: 30%;
+    height: auto;
   }
 
-
-
   .modal-video .close-modal {
-      position: relative;
-      // margin-left: 42.5%;
-      top: 5%;
+    position: relative;
+    // margin-left: 42.5%;
+    top: 5%;
   }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 992px) {
   .modal-video .modal-content {
-      top: 4%;
-      margin: 1% auto;
-      margin-left: auto;
-      width: 30%;
-      height: auto;
+    top: 4%;
+    margin: 1% auto;
+    margin-left: auto;
+    width: 30%;
+    height: auto;
   }
 
   .modal-video .close-modal {
-      position: relative;
-      // margin-left: 42.5%;
-      top: 5%;
+    position: relative;
+    // margin-left: 42.5%;
+    top: 5%;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 768px) {
   .modal-video .modal-content {
-      top: 4%;
-      margin: 1% auto;
-      margin-left: auto;
-      width: 40%;
-      height: auto;
+    top: 4%;
+    margin: 1% auto;
+    margin-left: auto;
+    width: 40%;
+    height: auto;
   }
-
 
   .modal-video .close-modal {
-      position: relative;
-      // margin-left: 42.5%;
-      top: 5%;
+    position: relative;
+    // margin-left: 42.5%;
+    top: 5%;
   }
 }
-
-
 
 // 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜
 // END OF THE SCSS PROJECT *******************************************************************************************
