--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -14,8 +14,7 @@
     <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
-<div *ngIf="bmxClientPageOverview" style="display: flex; flex-direction: row-reverse;justify-content: end;top: -30px;right: 50px;border: 2px dashed #324395;padding-right: 10px;background: #ffffffd9;
-    position: absolute;height: 54px;align-items: center;padding-right: 38px;">
+<div *ngIf="bmxClientPageOverview" class="overview">
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
     <div *ngIf="isColumnResizerOn" class="" style="display: flex;
         flex-direction: row;
@@ -47,7 +46,7 @@
                 [value]="bmxItem.componentSettings[0].rateWidth">
         </div>
         <!-- COMMENTS -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
+        <div *ngIf="columnsNames.includes('Comments0')" style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">comments
             </p>
             <input type="range" style="margin: 20px;width: 50px;"
@@ -135,7 +134,7 @@
             matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>
-        <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
+        <button  (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
             matTooltip="add comments column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
         </button>
