--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -110,8 +110,10 @@
             <div class="thankYouPage" id="login-form">
               <img class="logo" src="assets/img/NAMEPAGE_LOGO-01.svg">
               <br> <br>
-              <div class="title" style="color: #004684;">Thank you for using NamePage.</div>
-              <div class="title" style="color: #004684;">To submit additional names, please refresh the page.</div>
+              <div class="title-container">
+                <div class="title" style="color: #004684;">Thank you for using NamePage.</div>
+              <p class="title" style=" width: 70%; color: #004684;">To submit additional names, please refresh the page.</p>
+              </div>
               <br>
               <button mat-mini-fab (click)="reloadpage()" class="refreshbutton" aria-label="icon">
                 <mat-icon>refresh</mat-icon>
@@ -256,8 +258,10 @@
             <div class="thankYouPage" id="login-form">
               <img class="logo" src="assets/img/NAMEPAGE_LOGO-01.svg">
               <br> <br>
-              <div class="title" style="color: #004684;">Thank you for using NamePage.</div>
-              <div class="title" style="color: #004684;">To submit additional names, please refresh the page.</div>
+              <div class="title-container">
+                <div class="title" style="color: #004684;">Thank you for using NamePage.</div>
+              <p class="title" style="  color: #004684;">To submit additional names, please refresh the page.</p>
+              </div>
               <br>
               <button mat-mini-fab (click)="reloadpage()" class="refreshbutton" aria-label="icon">
                 <mat-icon>refresh</mat-icon>
