--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -101,23 +101,14 @@
     max-width: 100%;
     height: auto;
   }
-  // .title-container{
-  //   display: flex;
-  //   flex-direction: column;
-  //   align-items: center;
-  //   align-content: center;
-  //   flex-wrap: wrap;
-  // }
-  // .title {
-  //   margin-top: 10px;
-  //   font-size: 1.4em;
-  // }
+
   .title-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    gap: 1rem;
   }
   .title {
     color: #004684;
