Fixed image rate sliders

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -17,7 +17,12 @@
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 
-<div *ngIf="bmxClientPageOverview" class="overview" >
+<div *ngIf="bmxClientPageOverview" style="display: flex;
+    flex-direction: row-reverse;
+    justify-content: end;
+    top: -30px;
+    right: 50px;border: 2px dashed #324395;padding-right: 10px;background: #ffffffd9;
+    position: absolute;height: 54px;align-items: center" >
 
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
