--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
@@ -333,7 +333,7 @@ mat-form-field {
   margin-right: 12px;
 }
 
-.pageOverviee {
+.pageOverview {
   display: flex;
   flex-direction: row;
   justify-content: start;
