--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -18,10 +18,7 @@
 
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
-    <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="    display: flex;
-    flex-direction: row;
-    justify-content: start;background: #ffffffd9;
-    gap: 0px;position: absolute;left: -748px;z-index: 1;border: 2px dashed #324395;">
+    <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="page-overview" >
         <!-- RATE -->
         
         <div *ngIf="this.bmxItem.componentSettings[0].rankType != 'dinamycRadio'" style="display: flex;flex-direction: column;align-items: center;">
