--- a/src/app/bmx/components/project-list/project-list.component.html
+++ b/src/app/bmx/components/project-list/project-list.component.html
@@ -2,9 +2,9 @@
     <app-survey-dialog (onConfirm)="deleteBM(projectName)" (onCancel)="closeDialog()"
         [dialogText]="dialogText"></app-survey-dialog>
 </div>
-<div style="width: 100%; display: flex; align-items: flex-start; gap: 0%;">
+<div class="list-container">
     <div style="width: 75%;">
-        <div style="display: flex;justify-content: space-between; margin-top: 20px;">
+        <div class="list-header">
             <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">MATRIX LIST</div>
             <mat-form-field style="float:right; padding-right: 20px" appearance="outline">
                 <mat-label>Search</mat-label>
