--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -18,11 +18,10 @@
 
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
-<<<<<<< HEAD
-    <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="page-overview">
-=======
-    <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="page-overview" >
->>>>>>> f465d1ab876f2d90577359c2bf7a525e1cff7ff6
+    <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="    display: flex;
+    flex-direction: row;
+    justify-content: start;background: #ffffffd9;
+    gap: 0px;position: absolute;left: -748px;z-index: 1;border: 2px dashed #324395;">
         <!-- RATE -->
         
         <div *ngIf="this.bmxItem.componentSettings[0].rankType != 'dinamycRadio'" style="display: flex;flex-direction: column;align-items: center;">
@@ -176,7 +175,9 @@
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4 config-box" cdkDrag >
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: #063074 4px solid; overflow: auto;
+   max-height: 36rem;
+bottom: -2; ">
 
     <div class="example-handle" cdkDragHandle
         style="display: flex;flex-direction: row;justify-content: center;cursor: move; height: 25px; width: 100%;"><svg
