--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.scss
@@ -64,6 +64,20 @@
   color: grey;
 }
 // 🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧
+
+.config-box {
+  position: absolute;
+  width: 50%;
+  background: #fafafa;
+  z-index: 1;
+  top: -65px;
+  left: 25%;
+  border: #063074 4px solid;
+  overflow: auto;
+  max-height: 36rem;
+  bottom: -2;
+}
+
 .sm-section2-rkScale {
   display: flex;
   flex-direction: column;
@@ -356,6 +370,12 @@ mat-form-field {
   border: 2px dashed #324395;
 }
 // INPUT RANGE STYLE
+
+.range-inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 input[type="range"] {
   -webkit-appearance: none;
