--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -4,7 +4,7 @@
 
         <div class="desktop">
             <button *ngIf="true" (click)="seeTutorial()" class="see-tutorial" mat-icon-button matTooltip="see tutorial"
-                matTooltipPosition="above" style="position: absolute;color: grey;z-index: 9999999999;outline: none;">
+                matTooltipPosition="above" >
                 <mat-icon class="full-icon" style="font-size: 36px;">contact_support</mat-icon>
             </button>
             <!-- <button (click)="displayQrCode()" mat-icon-button matTooltip="design tools" matTooltipPosition="above"
