--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -179,9 +179,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
 
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4 config-box">
 
-<div class="example-handle" cdkDragHandle style="display: flex;
-flex-direction: row;
-justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor"
+<div class="example-handle" cdkDragHandle ><svg width="24px" fill="currentColor"
         viewBox="0 0 24 24">
         <path
             d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
