--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -20,7 +20,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
 
 <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="pageOverview" >
     <!-- NAME CANDIATES -->
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class="range-inputs">
         <p style="margin: 0 0 -12px;color: #324395;">questions
         </p>
         <input type="range" style="margin: 20px;width: 50px;"
@@ -28,7 +28,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
             tickInterval="0.5" min="50" max="900" [value]="bmxItem.componentSettings[0].nameCandidatesWidth">
     </div>
 
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class="range-inputs">
         <p style="margin: 0 0 -12px;color: #324395;">answers
         </p>
         <input type="range" style="margin: 20px;width: 50px;"
@@ -38,7 +38,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </div>
 
     <!-- COMMENTS -->
-    <div *ngIf="columnsNames.includes('Comments0')" style="display: flex;flex-direction: column;align-items: center;">
+    <div *ngIf="columnsNames.includes('Comments0')" class="range-inputs">
         <p style="margin: 0 0 -12px;color: #324395;">options
         </p>
         <input type="range" style="margin: 20px;width: 50px;"
@@ -49,7 +49,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
 
 
     <!-- REST OF THE COLUMNS -->
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class="range-inputs">
         <p style="margin: 0 0 -12px;color: #324395;">other columns
         </p>
         <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].columnWidth"
@@ -59,7 +59,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
 
     <!-- ROW HEIGHT -->
 
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class="range-inputs">
         <p style="margin: 0 0 -12px;color: #324395;">row height</p>
         <input type="range" style="margin: 20px;width: 60px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
             class="slider-font-size" tickInterval="0.5" min="-10" max="20"
@@ -67,7 +67,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </div>
 
     <!-- FONT -->
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class="range-inputs">
         <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
         <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
             class="slider-font-size" tickInterval="0.1" min="2" max="50"
@@ -75,7 +75,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </div>
 
     <!-- RADIO -->
-    <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
+    <div *ngIf="radioColumnCounter > 1" class="range-inputs">
         <p style="margin: 0 0 -12px;color: #324395;">radio</p>
         <input type="range" style="margin: 20px;width: 50px;"
             [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth" class="slider-font-size" tickInterval="0.5"
@@ -153,9 +153,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag style="position: absolute;width: 50%;background: #fafafa;z-index: 1;top: -65px;left: 25%;border: #063074 4px solid; overflow: auto;
-   max-height: 36rem;
-bottom: -2; ">
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4 config-box" cdkDrag >
 
 <div class="example-handle" cdkDragHandle style="display: flex;
 flex-direction: row;
