--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
@@ -1,72 +1,52 @@
 @mixin BoxShadow($dp) {
   @if $dp==0 {
     box-shadow: none;
-  }
-
-  @else if $dp==1 {
+  } @else if $dp==1 {
     box-shadow:
       0 1px 1px 0 rgba(0, 0, 0, 0.14),
       0 2px 1px -1px rgba(0, 0, 0, 0.12),
       0 1px 3px 0 rgba(0, 0, 0, 0.2);
-  }
-
-  @else if $dp==2 {
+  } @else if $dp==2 {
     box-shadow:
       0 2px 2px 0 rgba(0, 0, 0, 0.14),
       0 3px 1px -2px rgba(0, 0, 0, 0.12),
       0 1px 5px 0 rgba(0, 0, 0, 0.2);
-  }
-
-  @else if $dp==3 {
+  } @else if $dp==3 {
     box-shadow:
       0 3px 4px 0 rgba(0, 0, 0, 0.14),
       0 3px 3px -2px rgba(0, 0, 0, 0.12),
       0 1px 8px 0 rgba(0, 0, 0, 0.2);
-  }
-
-  @else if $dp==4 {
+  } @else if $dp==4 {
     box-shadow:
       0 4px 5px 0 rgba(0, 0, 0, 0.14),
       0 1px 10px 0 rgba(0, 0, 0, 0.12),
       0 2px 4px -1px rgba(0, 0, 0, 0.2);
-  }
-
-  @else if $dp==6 {
+  } @else if $dp==6 {
     box-shadow:
       0 6px 10px 0 rgba(0, 0, 0, 0.14),
       0 1px 18px 0 rgba(0, 0, 0, 0.12),
       0 3px 5px -1px rgba(0, 0, 0, 0.2);
-  }
-
-  @else if $dp==8 {
+  } @else if $dp==8 {
     box-shadow:
       0 8px 10px 1px rgba(0, 0, 0, 0.14),
       0 3px 14px 2px rgba(0, 0, 0, 0.12),
       0 5px 5px -3px rgba(0, 0, 0, 0.2);
-  }
-
-  @else if $dp==9 {
+  } @else if $dp==9 {
     box-shadow:
       0 9px 12px 1px rgba(0, 0, 0, 0.14),
       0 3px 16px 2px rgba(0, 0, 0, 0.12),
       0 5px 6px -3px rgba(0, 0, 0, 0.2);
-  }
-
-  @else if $dp==12 {
+  } @else if $dp==12 {
     box-shadow:
       0 12px 17px 2px rgba(0, 0, 0, 0.14),
       0 5px 22px 4px rgba(0, 0, 0, 0.12),
       0 7px 8px -4px rgba(0, 0, 0, 0.2);
-  }
-
-  @else if $dp==16 {
+  } @else if $dp==16 {
     box-shadow:
       0 16px 24px 2px rgba(0, 0, 0, 0.14),
       0 6px 30px 5px rgba(0, 0, 0, 0.12),
       0 8px 10px -5px rgba(0, 0, 0, 0.2);
-  }
-
-  @else if $dp==24 {
+  } @else if $dp==24 {
     box-shadow:
       0 24px 38px 3px rgba(0, 0, 0, 0.14),
       0 9px 46px 8px rgba(0, 0, 0, 0.12),
@@ -87,6 +67,20 @@
 }
 
 // 🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧
+
+.config-box {
+  position: absolute;
+  width: 50%;
+  background: #fafafa;
+  z-index: 1;
+  top: -65px;
+  left: 25%;
+  border: #063074 4px solid;
+  overflow: auto;
+  max-height: 36rem;
+  bottom: -2;
+}
+
 .config-config {
   position: absolute;
   width: 50%;
@@ -377,7 +371,6 @@ textarea:placeholder-shown {
   background: none;
 }
 
-
 .page-overview {
   display: flex;
   flex-direction: row;
@@ -505,7 +498,6 @@ input[type="range"]:focus::-ms-fill-upper {
 }
 
 @supports (-webkit-appearance: none) or (-moz-appearance: none) {
-
   input[type="checkbox"],
   input[type="radio"] {
     --active: #ee7f25;
@@ -561,7 +553,7 @@ input[type="range"]:focus::-ms-fill-upper {
         --bc: var(--border);
       }
 
-      &+label {
+      & + label {
         cursor: not-allowed;
       }
     }
@@ -590,7 +582,7 @@ input[type="range"]:focus::-ms-fill-upper {
       }
     }
 
-    &+label {
+    & + label {
       font-size: 14px;
       line-height: 21px;
       display: inline-block;
@@ -762,6 +754,14 @@ input[type="range"]:focus::-ms-fill-upper {
   align-items: center;
 }
 
+.example-handle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  cursor: move;
+  height: 25px;
+  width: 100%;
+}
 //-------------modal-----------------//
 @media (min-width: 1025px) {
   .modal-video .modal-content {
