--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -2,30 +2,54 @@
     @if $dp==0 {
         box-shadow: none;
     } @else if $dp==1 {
-        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+        box-shadow:
+            0 1px 1px 0 rgba(0, 0, 0, 0.14),
+            0 2px 1px -1px rgba(0, 0, 0, 0.12),
+            0 1px 3px 0 rgba(0, 0, 0, 0.2);
     } @else if $dp==2 {
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+        box-shadow:
+            0 2px 2px 0 rgba(0, 0, 0, 0.14),
+            0 3px 1px -2px rgba(0, 0, 0, 0.12),
+            0 1px 5px 0 rgba(0, 0, 0, 0.2);
     } @else if $dp==3 {
-        box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+        box-shadow:
+            0 3px 4px 0 rgba(0, 0, 0, 0.14),
+            0 3px 3px -2px rgba(0, 0, 0, 0.12),
+            0 1px 8px 0 rgba(0, 0, 0, 0.2);
     } @else if $dp==4 {
-        box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+        box-shadow:
+            0 4px 5px 0 rgba(0, 0, 0, 0.14),
+            0 1px 10px 0 rgba(0, 0, 0, 0.12),
+            0 2px 4px -1px rgba(0, 0, 0, 0.2);
     } @else if $dp==6 {
-        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12),
+        box-shadow:
+            0 6px 10px 0 rgba(0, 0, 0, 0.14),
+            0 1px 18px 0 rgba(0, 0, 0, 0.12),
             0 3px 5px -1px rgba(0, 0, 0, 0.2);
     } @else if $dp==8 {
-        box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12),
+        box-shadow:
+            0 8px 10px 1px rgba(0, 0, 0, 0.14),
+            0 3px 14px 2px rgba(0, 0, 0, 0.12),
             0 5px 5px -3px rgba(0, 0, 0, 0.2);
     } @else if $dp==9 {
-        box-shadow: 0 9px 12px 1px rgba(0, 0, 0, 0.14), 0 3px 16px 2px rgba(0, 0, 0, 0.12),
+        box-shadow:
+            0 9px 12px 1px rgba(0, 0, 0, 0.14),
+            0 3px 16px 2px rgba(0, 0, 0, 0.12),
             0 5px 6px -3px rgba(0, 0, 0, 0.2);
     } @else if $dp==12 {
-        box-shadow: 0 12px 17px 2px rgba(0, 0, 0, 0.14), 0 5px 22px 4px rgba(0, 0, 0, 0.12),
+        box-shadow:
+            0 12px 17px 2px rgba(0, 0, 0, 0.14),
+            0 5px 22px 4px rgba(0, 0, 0, 0.12),
             0 7px 8px -4px rgba(0, 0, 0, 0.2);
     } @else if $dp==16 {
-        box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12),
+        box-shadow:
+            0 16px 24px 2px rgba(0, 0, 0, 0.14),
+            0 6px 30px 5px rgba(0, 0, 0, 0.12),
             0 8px 10px -5px rgba(0, 0, 0, 0.2);
     } @else if $dp==24 {
-        box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12),
+        box-shadow:
+            0 24px 38px 3px rgba(0, 0, 0, 0.14),
+            0 9px 46px 8px rgba(0, 0, 0, 0.12),
             0 11px 15px -7px rgba(0, 0, 0, 0.2);
     }
 }
@@ -95,12 +119,12 @@
         img:last-child {
             margin-bottom: 0;
         }
-    }    
+    }
 
     .close-modal {
         // margin-bottom: 5px;
         position: relative;
-    
+
         // top: 12%;
         left: 42.5%;
         width: 15%;
@@ -114,7 +138,9 @@
         // text-align: center;
         // height: 25px;
         // border-radius: 5px;
-        transition: background-color 0.5s, color 0.5s;
+        transition:
+            background-color 0.5s,
+            color 0.5s;
     }
 
     .close-modal:hover,
@@ -141,11 +167,10 @@
     margin-bottom: 12px;
     font-size: 22px;
     color: #e9ecef;
-    
 }
 
-::ng-deep .mat-checkbox-background, 
-.mat-checkbox-background{
+::ng-deep .mat-checkbox-background,
+.mat-checkbox-background {
     background-color: #e9ecef80;
 }
 /* escondemos el default checkbox */
@@ -203,7 +228,6 @@
     background-position: center, center;
     background-color: whitesmoke;
     background-blend-mode: screen;
-    
 }
 
 .errorcode {
@@ -267,6 +291,10 @@
     .see-tutorial {
         bottom: 10px;
         right: 55px;
+        position: absolute;
+        color: grey;
+        z-index: 9999999999;
+        outline: none;
     }
     .container-checkbox {
         margin-left: 10%;
